# Django-To-Do

./: .envrc.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/: db.sqlite3
src/base/: admin.py  middleware.py  models.py  views.py
src/base/migrations/: 0001_initial.py  0002_alter_customuser_profile_picture.py  0002_alter_task_options_alter_task_due_date.py  0003_customuser.py  0004_alter_customuser_groups_and_more.py  0005_alter_customuser_email.py
src/config/: asgi.py  environ.py  settings.py  urls.py  wsgi.py
src/static/: main.css
src/templates/base/: change_password.html  change_password_done.html  edit_user.html  home.html  login.html  main.html  register.html  task.html  task_confirm_delete.html  task_detail.html  task_form.html
